# atari800

DOC/: USAGE
artifacting-c-lib/: CMakeLists.txt  Makefile  README.md
src/: Makefile.am  antic.c  antic.h  artifact.c  artifact.h  atari800.man  ui.c
src/altirra_artifacting/: artifacting.c  artifacting_c.h  artifacting_filters.c  artifacting_filters.h  artifacting_pal_scalar.c  atc_internal.h  gtiatables.c  gtiatables.h  palettegenerator.c  palettegenerator.h
src/sdl/: video.c  video.h  video_gl.c  video_sw.c
src/sdl/crt-royale/: crt-royale-fake-bloom.glslp  crt_royale_masks.h
src/sdl/crt-royale/src/: crt-royale-bloom-approx-fake-bloom.glsl  crt-royale-first-pass-linearize-crt-gamma-bob-fields.glsl  crt-royale-geometry-aa-last-pass.glsl  crt-royale-mask-resize-horizontal.glsl  crt-royale-mask-resize-vertical.glsl  crt-royale-scanlines-horizontal-apply-mask-fake-bloom.glsl  crt-royale-scanlines-vertical-interlacing.glsl
